# hku_engg1340_course_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  prep.sh  template_resolver.cpp  template_resolver.h  util.cpp  util.h
controllers/: controller.cpp  controller.h  create_controller.cpp  create_controller.h  edit_controller.cpp  edit_controller.h  menu_controller.cpp  menu_controller.h  query_controller.cpp  query_controller.h  search_controller.cpp  search_controller.h  special_controller.cpp  special_controller.h  welcome_controller.cpp  welcome_controller.h
controllers/querysys/: build.cpp  build.h  comparison.cpp  comparison.h  tokenizer.cpp  tokenizer.h
models/: employee.cpp  employee.h
res/templates/: create.template.txt  error.template.txt  menu.template.txt  notfound.template.txt  notimplemented.template.txt  profile-editing.template.txt  profile.template.txt  querysys.template.txt  search-criteria.template.txt  search-value.template.txt  search.template.txt  welcome.template.txt
